src/test/resources/valid_programs/precedences__boolean_operators.notc
void main() {
    // These should evaluate to true if && has higher precedence than ||
    printInt(true || false && false);
    printInt(true && true || true && false);
    printInt(false || true || false && true && false);
    printInt(false && true || true || false && false && true);
}
