src/test/resources/syntax_errors/while_while_true.notc
void main() {
    while (while(true){}) {
    }
}
